--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 				<li>Resume</li>
 			</a>
 
-			<a id="myDiv" href="https://sanatnayar-reactjs-portfolio.herokuapp.com/" onclick="javascript:document.getElementById('page-loader').style.display='block';">
-				<li>React Portfolio</li>
+			<a id="myDiv" href="projects.html">
+				<li>Projects</li>
 			</a>
 			<div id="loader" style="display:none;background:green;padding:0px">This is a loader</div>
 		</ul>
@@ -42,22 +42,40 @@
   <p class='masthead-intro'>Hi I'm</p>
   <h1 class='masthead-heading'>Sanat!</h1>
 
-</header>
-<section class="introduction-section">
+  <section class="introduction-section">
     <h1>Intro</h1>
-    <p>I am a passionate Computer Engineering Student at University of Ottawa that strives to use technology to solve the world's biggest problems!!!!!</p>
+    <p>I am a passionate Computer Engineering Student at University of Ottawa that strives to use technology to solve the world's biggest problems.</p>
 </section>
 <section class="location-section">
     <h1>Where I'm From</h1>
     <p>Ottawa, Ontario</p>
 </section>
 <section class="questions-section">
-    <h2>Where do you currently work?</h2>
-    <p>I am a currently working part-time as a Student IT Developer at Canadian Border Services Agency (CBSA).</p>
-		<p>Also looking for a Summer 2019 Work-Term Position for my first COOP!!!</p>
-    <h2>What's your dream job?</h2>
-    <p>My dream job is a Software Archetict postion in a Fortune 500 Company in which I can combine software principles, business fundamentals and industry knowledge to have a positive impact on society!!!</p>
+	<h1>Work Experience:</h1>
+	
+    <p><img src="nokia_logo.png" style="width:20%; padding-top: 3%"></p>
+		<p>April 2019 - August 2019</p>
+		<p>Worked on the <a class="link" href="https://nsp.developer.nokia.com/product/">Network Services Platform</a> (NSP) Team that works with networking vendors around the world to provide internet and telecommunication services. Worked on the Subscriber Management Module that provides vendors with Key-Performance Indicators (KPIs) of the health of their routing ecosystem. </p>
+	<br/>
+	<p><img src="CBSA.png" style="width:25%"></p>
+		<p>September 2018 - April 2019</p>
+		<p>Worked on the HR Software System for CBSA. Migrated Data for current and
+			prospective employees to an improved user interface using Visual
+			Basics. Enhanced the data processing to bring efficiency in the system.
+			Improved search queries on large data sets and created applications using VBA,
+			Macros, and Excel to combine databases and create charts.</p>
+			<br/>
+	<p><img src="circle-cropped.png" style="width:10%"></p>
+		<p>September 2016 - February 2017</p>
+		<p>Founding member of Swappable; a start-up that strived to create a platform for Person-to-Person exchange of goods in local
+			High Schools. Handled expenses using the Square API and implemented encryption for user data protection. Gained valuable leadership experience while communicating and delegating
+			tasks to members of the team and developed interpersonal and presentation
+			skills by giving short pitches to potential investors.</p>
+    <h2>Connect with ME!</h2>
+    <p>Ping me an email at <a class="link" href="mailto:sanatnayar@gmail.com">sanatnayar@gmail.com</a> and lets have a chat!</p>
 </section>
+</header>
+
 
 <footer class="content-footer">
     <p>Learn More About me on these Networks:</p>
