--- a/resume.html
+++ b/resume.html
@@ -27,9 +27,9 @@
         <li>Resume</li>
       </a>
 
-      <a href="https://sanatnayar-reactjs-portfolio.herokuapp.com/" class="animsition-link">
-        <li>React Portfolio</li>
-      </a>
+      <a id="myDiv" href="projects.html">
+				<li>Projects</li>
+			</a>
     </ul>
 
   </div>
