--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="icon" href="person-male.ico">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
@@ -43,9 +44,10 @@
 					<li>Resume</li>
 				</a>
 
-				<a id="myDiv" href="https://sanatnayar-reactjs-portfolio.herokuapp.com/" onclick="javascript:document.getElementById('page-loader').style.display='block';">
-					<li>React Portfolio</li>
+				<a id="myDiv" href="projects.html">
+					<li>Projects</li>
 				</a>
+
 				<div id="loader" style="display:none;background:green;padding:0px">This is a loader</div>
 			</ul>
 
@@ -56,11 +58,14 @@
 		<div id="particles-js"></div>
 			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 			<script src="js/Background_Animation.js"></script>
-
+		
+			
 
 
 	    <div class="text"></div>
 			<script src="js/Text_Scrambler.js"></script>
+
+	
 
 	</div>
 
