--- a/index.html
+++ b/index.html
@@ -59,12 +59,29 @@
 			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 			<script src="js/Background_Animation.js"></script>
 		
-			
+		
 
+			<div class="container1">
+				<div style="flex-direction: row">
+						<div class="h1"> Hi, I'm</div>
+				</div>
+				
+		  <h1>
+			<div class="animation">
+				<div class="animation-left"><span>Sanat Nayar</span></div>
+				<div class="animation-right"><span>Sanat Nayar</span></div>
+			  </div>
+		  </h1>
+		  <div class="links">
+				<img src="facebook.png" class="icon" style="padding-right: 2%" >
+				<img src="github.png" class="icon" style="padding-right: 2%"onclick="window.open(https://github.com/sanatnayar)">
+				<img src="linkedin.png" class="icon" style="padding-right: 2%">
+				<img src="email.png"  class="icon" style="padding-right: 2%">
 
-	    <div class="text"></div>
-			<script src="js/Text_Scrambler.js"></script>
-
+		  </div>
+		  
+		</div>
+		
 	
 
 	</div>
