--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="icon" href="person-male.ico">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	
 
 
 
@@ -55,11 +56,10 @@
 
 
 
-		<div id="particles-js"></div>
-			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-			<script src="js/Background_Animation.js"></script>
+		<div id="particles-js">
+			
 		
-		
+		</div>
 
 			<div class="container1">
 				<div style="flex-direction: row">
@@ -73,16 +73,24 @@
 			  </div>
 		  </h1>
 		  <div class="links">
-				<img src="facebook.png" class="icon" style="padding-right: 2%" >
-				<img src="github.png" class="icon" style="padding-right: 2%"onclick="window.open(https://github.com/sanatnayar)">
-				<img src="linkedin.png" class="icon" style="padding-right: 2%">
-				<img src="email.png"  class="icon" style="padding-right: 2%">
-
+			  <a href="https://www.facebook.com/sanat.nayar.10">
+					<img src="facebook.png" class="icon" style="padding-right: 2%" alt="">
+			  </a>
+			  <a href="https://github.com/sanatnayar">
+				<img src="github.png" class="icon" style="padding-right: 2%" alt="">
+			  </a>
+			  <a href="https://www.linkedin.com/in/sanat-nayar/">
+				<img src="linkedin.png" class="icon" style="padding-right: 2%" alt="">
+			  </a>
+			  <a href="mailto:sanatnayar@gmail.com">
+				<img src="email.png"  class="icon" style="padding-right: 2%" alt="">
+			 </a>
 		  </div>
 		  
 		</div>
 		
-	
+		<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+		<script src="js/Background_Animation.js"></script>
 
 	</div>
 
