--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
   <section class="introduction-section">
     <h1>Intro</h1>
-    <p>I am a passionate Computer Engineering Student at University of Ottawa that strives to use technology to solve the world's biggest problems.</p>
+    <p>I am a passionate developer who eats, sleeps and breathes Data Science and Data Analytics. I strive to combine Biology and Data Science to solve the world's biggest health problems.</p>
 </section>
 <section class="location-section">
     <h1>Where I'm From</h1>
@@ -52,7 +52,11 @@
 </section>
 <section class="questions-section">
 	<h1>Work Experience:</h1>
-	
+	<p><img src="qlik-logo.png" style="width:25%"></p>
+		<p>January 2020 - May 2020</p>
+		<p>Worked as a Cloud/AI Software Engineering intern in the Research and Development (R&D) section of Qlik. </p>
+			<p>Worked with cloud computing technologies to deploy Business Intelligence (BI) systems, created a NLP application to gather information on Kubernetes Clusters and used Data Analytics solutions in BI Applications to explore event metrics. </p>
+			<br/>
     <p><img src="nokia_logo.png" style="width:20%; padding-top: 3%"></p>
 		<p>April 2019 - August 2019</p>
 		<p>Worked on the <a class="link" href="https://nsp.developer.nokia.com/product/">Network Services Platform</a> (NSP) Team that works with networking vendors around the world to provide internet and telecommunication services. Worked on the Subscriber Management Module that provides vendors with Key-Performance Indicators (KPIs) of the health of their routing ecosystem. </p>
